--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "main": "app.js",
   "dependencies": {
     "bcrypt": "^4.0.1",
-    "bootstrap": "^4.5.0",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.0",
     "crypto": "^1.0.1",
-    "express-favicon": "^2.0.1",
     "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "fs": "^0.0.1-security",
     "jsdom": "^16.2.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.13",
     "node-uuid": "^1.4.8",
     "nodemon": "^2.0.4",
+    "path": "^0.12.7",
     "pretty-time": "^1.1.0",
     "raw-body": "^2.4.1",
     "serve-index": "^1.9.1",
